# trendscope

./: .clinerules  .gitignore  .project-meta.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  crawl_all.sh  pyproject.toml  setup.py
.github/workflows/: doc-gate.yml  test.yml
.plan/: progress.md  task_plan.md
admin/: app.html  dashboard.html  index.html  package.json
admin/src/: App.vue  main.ts
crawler-engine/: Dockerfile  requirements.txt  test_163.py
crawler-engine/anti_anti_spider/: __init__.py  cookie_manager.py  fingerprint.py  proxy_pool.py  request_throttle.py
crawler-engine/models/: schema.py
crawler-engine/pipeline/: __init__.py  (+5 more)
deploy/: docker-compose.yml  nginx.conf  start.sh  stop.sh
docs/: API_SPEC.md  ARCHITECTURE.md  DESIGN.md  PRD.md  PROJECT_PLAN.md  TEST_PLAN.md
frontend/: .env.example  AGENTS.md  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
references/: commits.md  quality-gates.md  testing.md
scripts/: crawl_all.sh  crawl_once.py  debug_weibo.py  debug_weibo2.py  init-db.sql  init_db.py  k6-load-test.js  load_credentials.py  proxy_check.py  push-to-github.ps1  server-setup.sh  smoke-test.sh  start_all.ps1  start_api.sh  start_dev.bat  test_all_http.py  test_http_spiders.py  test_weibo_fix.py  test_weibo_full.py
tests/: conftest.py  test_admin_api.py  test_api.py  test_pipeline.py  test_services.py  test_sms_login.py  test_user_auth.py
trendscope/: AGENTS.md  MEMORY.md  __init__.py
trendscope.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+104 files in other folders)
